internal/translator/testdata/nonroot_ambiguous_prefix/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nonroot-ambiguous-match
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /foo/bar
    services:
    - name: s1
      port: 80
