internal/translator/testdata/nonroot_ambiguous_prefix/errors.txt
Can't determine include path from single match /foo/bar. HTTPProxy prefix conditions should not include the include prefix. Please check this value is correct. See https://projectcontour.io/docs/main/httpproxy/#conditions-and-inclusion
